--- a/.github/workflows/ci_two_touching_cuboids.yml
+++ b/.github/workflows/ci_two_touching_cuboids.yml
@@ -18,8 +18,7 @@ jobs:
 
       - name: install dependencies
         run: |
-          conda install -c conda-forge mamba
-          mamba install -c cadquery -c conda-forge moab gmsh python-gmsh cadquery=master -y
+          conda install -c cadquery -c conda-forge moab gmsh python-gmsh cadquery=master -y
 
       - name: install package with tests
         run: |
