--- a/.github/workflows/ci_sphericalshell.yml
+++ b/.github/workflows/ci_sphericalshell.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: install package with tests
         run: |
-          pip install .
+          pip install .[tests]
 
       - name: Run tests
         run: |
