--- a/.github/workflows/ci_cuboid.yml
+++ b/.github/workflows/ci_cuboid.yml
@@ -11,14 +11,18 @@ jobs:
   testing:
     runs-on: ubuntu-latest
     container:
-      image: continuumio/miniconda3
+      image: continuumio/miniconda3:23.3.1-0
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: install dependencies
         run: |
-          conda install -c cadquery -c conda-forge moab gmsh python-gmsh cadquery=master -y
+          apt-get --allow-releaseinfo-change update
+          apt-get update -y
+          apt-get upgrade -y
+          apt-get install -y libgl1-mesa-glx libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev libosmesa6 libosmesa6-dev libgles2-mesa-dev libarchive-dev libpangocairo-1.0-0
+          conda install -y -c cadquery -c conda-forge moab gmsh python-gmsh cadquery=master
 
       - name: install package with tests
         run: |
