--- a/.github/workflows/ci_sphere.yml
+++ b/.github/workflows/ci_sphere.yml
@@ -22,7 +22,8 @@ jobs:
           apt-get update -y
           apt-get upgrade -y
           apt-get install -y libgl1-mesa-glx libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev libosmesa6 libosmesa6-dev libgles2-mesa-dev libarchive-dev libpangocairo-1.0-0
-          conda install -y -c cadquery -c conda-forge moab gmsh python-gmsh cadquery=master
+          conda install -y -c conda-forge mamba
+          mamba install -y -c cadquery -c conda-forge moab gmsh python-gmsh cadquery=master
 
       - name: install package with tests
         run: |
