--- a/.github/workflows/ci_two_touching_cuboids.yml
+++ b/.github/workflows/ci_two_touching_cuboids.yml
@@ -24,6 +24,7 @@ jobs:
           apt-get install -y libgl1-mesa-glx libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev libosmesa6 libosmesa6-dev libgles2-mesa-dev libarchive-dev libpangocairo-1.0-0
           conda install -y -c conda-forge mamba
           mamba install -y -c cadquery -c conda-forge moab gmsh python-gmsh cadquery=master openmc
+          pip install cad_to_dagmc
 
       - name: install package with tests
         run: |
