--- a/.github/workflows/ci_sphericalshell.yml
+++ b/.github/workflows/ci_sphericalshell.yml
@@ -24,12 +24,16 @@ jobs:
           apt-get install -y libgl1-mesa-glx libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev libosmesa6 libosmesa6-dev libgles2-mesa-dev libarchive-dev libpangocairo-1.0-0
           conda install -y -c conda-forge mamba
           mamba install -y -c cadquery -c conda-forge moab gmsh python-gmsh cadquery=master openmc
-          pip install cad_to_dagmc
+          pip install cad_to_dagmc openmc_data_downloader
+          openmc_data_downloader -l ENDFB-7.1-NNDC -i Fe56 Be9
+          pwd
 
       - name: install package with tests
         run: |
           pip install .[tests]
 
       - name: Run tests
+        env:
+          OPENMC_CROSS_SECTIONS: /__w/model_benchmark_zoo/model_benchmark_zoo/cross_sections.xml
         run: |
           pytest tests/test_csg_cad_sphericalshell.py
