--- a/.github/workflows/ci_two_touching_cuboids.yml
+++ b/.github/workflows/ci_two_touching_cuboids.yml
@@ -23,7 +23,7 @@ jobs:
           apt-get upgrade -y
           apt-get install -y libgl1-mesa-glx libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev libosmesa6 libosmesa6-dev libgles2-mesa-dev libarchive-dev libpangocairo-1.0-0
           conda install -y -c conda-forge mamba
-          mamba install -y -c cadquery -c conda-forge moab gmsh python-gmsh cadquery=master openmc
+          mamba install -y -c cadquery -c conda-forge moab gmsh python-gmsh cadquery=master "openmc=0.13.3=dagmc*nompi*"
           pip install cad_to_dagmc openmc_data_downloader
           openmc_data_downloader -l ENDFB-7.1-NNDC -i Fe56 Be9
           pwd
