--- a/.github/workflows/ci_cuboid.yml
+++ b/.github/workflows/ci_cuboid.yml
@@ -12,6 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      - name: checkout actions
+        uses: actions/checkout@v4
+
       - name: use upstream test composite action
         uses: ./.github/actions/dependencies
 
