--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -10,7 +10,7 @@ runs:
         shell: bash
         run: |
           curl -L -O "https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-$(uname)-$(uname -m).sh"
-          bash Miniforge3-$(uname)-$(uname -m).sh
+          bash Miniforge3-$(uname)-$(uname -m).sh -b
           sudo apt-get --allow-releaseinfo-change update
           sudo apt-get update -y
           sudo apt-get upgrade -y
