--- a/.github/workflows/ci_cuboid.yml
+++ b/.github/workflows/ci_cuboid.yml
@@ -22,4 +22,5 @@ jobs:
         env:
           OPENMC_CROSS_SECTIONS: /__w/model_benchmark_zoo/model_benchmark_zoo/cross_sections.xml
         run: |
+          mamba activate
           pytest tests/test_csg_cad_sphere.py
