--- a/.github/workflows/ci_cuboid.yml
+++ b/.github/workflows/ci_cuboid.yml
@@ -1,5 +1,4 @@
-
-name: Cuboid
+name: cuboid
 
 on:
   pull_request:
@@ -18,7 +17,7 @@ jobs:
       - name: use upstream test composite action
         uses: ./.github/actions/dependencies
 
-      - name: Run tests
+      - shell: bash
         env:
           OPENMC_CROSS_SECTIONS: /__w/model_benchmark_zoo/model_benchmark_zoo/cross_sections.xml
         run: |
