--- a/.github/workflows/ci_cylinder.yml
+++ b/.github/workflows/ci_cylinder.yml
@@ -12,11 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      - name: checkout actions
+        uses: actions/checkout@v4
+
       - name: use upstream test composite action
-        uses: actions/dependencies
+        uses: ./.github/actions/dependencies
 
       - name: Run tests
         env:
           OPENMC_CROSS_SECTIONS: /__w/model_benchmark_zoo/model_benchmark_zoo/cross_sections.xml
         run: |
+          mamba activate
           pytest tests/test_csg_cad_cylinder.py
