--- a/.github/workflows/ci_sphere.yml
+++ b/.github/workflows/ci_sphere.yml
@@ -19,4 +19,29 @@ jobs:
         env:
           OPENMC_CROSS_SECTIONS: /__w/model_benchmark_zoo/model_benchmark_zoo/cross_sections.xml
         run: |
+
+name: Cuboid
+
+on:
+  pull_request:
+    branches:
+      - develop
+      - main
+
+jobs:
+  testing:
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: checkout actions
+        uses: actions/checkout@v4
+
+      - name: use upstream test composite action
+        uses: ./.github/actions/dependencies
+
+      - name: Run tests
+        env:
+          OPENMC_CROSS_SECTIONS: /__w/model_benchmark_zoo/model_benchmark_zoo/cross_sections.xml
+        run: |
+          mamba activate
           pytest tests/test_csg_cad_sphere.py
