--- a/.github/workflows/ci_cuboid.yml
+++ b/.github/workflows/ci_cuboid.yml
@@ -21,5 +21,6 @@ jobs:
         env:
           OPENMC_CROSS_SECTIONS: /__w/model_benchmark_zoo/model_benchmark_zoo/cross_sections.xml
         run: |
+          source "${HOME}/conda/etc/profile.d/mamba.sh"
           mamba activate
           pytest tests/test_csg_cad_sphere.py
