--- a/.github/workflows/ci_cuboid.yml
+++ b/.github/workflows/ci_cuboid.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - develop
       - main
+    push:
+      - main
 
 jobs:
   testing:
@@ -13,6 +15,8 @@ jobs:
 
       - name: checkout actions
         uses: actions/checkout@v4
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1
 
       - name: use upstream test composite action
         uses: ./.github/actions/dependencies
