--- a/.github/workflows/ci_cylinder.yml
+++ b/.github/workflows/ci_cylinder.yml
@@ -20,9 +20,11 @@ jobs:
       - name: use upstream test composite action
         uses: ./.github/actions/dependencies
 
-      - name: Run tests
+      - shell: bash
         env:
-          OPENMC_CROSS_SECTIONS: /__w/model_benchmark_zoo/model_benchmark_zoo/cross_sections.xml
+          OPENMC_CROSS_SECTIONS: /home/runner/work/model_benchmark_zoo/model_benchmark_zoo/cross_sections.xml
         run: |
+          source "${HOME}/conda/etc/profile.d/conda.sh"
+          source "${HOME}/conda/etc/profile.d/mamba.sh"
           mamba activate
           pytest tests/test_csg_cad_cylinder.py
