--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -18,8 +18,9 @@ runs:
           sudo apt-get update -y
           sudo apt-get upgrade -y
           sudo apt-get install -y libgl1-mesa-glx libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev libosmesa6 libosmesa6-dev libgles2-mesa-dev libarchive-dev libpangocairo-1.0-0
-          mamba activate
-          mamba install -y -c conda-forge moab gmsh python-gmsh "openmc=0.14.0=dagmc*nompi*"
+          mamba create -y --name new_env python=3.10
+          mamba activate new_env
+          mamba install -y -c conda-forge moab>=5.3.0 gmsh python-gmsh "openmc=0.14.0=dagmc*nompi*"
           pip install cadquery-ocp==7.7.2
           pip install cadquery==2.4.0
           pip install cad_to_dagmc openmc_data_downloader
