--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -21,9 +21,9 @@ runs:
           mamba create -y --name new_env python=3.10
           mamba activate new_env
           mamba install -y -c conda-forge moab>=5.3.0 gmsh python-gmsh "openmc=0.14.0=dagmc*nompi*"
-          pip install cadquery-ocp==7.7.2
-          pip install cadquery==2.4.0
-          pip install cad_to_dagmc openmc_data_downloader
-          pip install CAD_to_OpenMC
+          python -m pip install cadquery-ocp==7.7.2
+          python -m pip install cadquery==2.4.0
+          python -m pip install cad_to_dagmc openmc_data_downloader
+          python -m pip install CAD_to_OpenMC
           openmc_data_downloader -l ENDFB-7.1-NNDC -i Fe56 Be9
-          pip install .[tests]
+          python -m pip install .[tests]
