--- a/.github/workflows/elliptical_torus_cad_to_dagmc.yml
+++ b/.github/workflows/elliptical_torus_cad_to_dagmc.yml
@@ -5,9 +5,9 @@ on:
     branches:
       - develop
       - main
-    push:
+  push:
+    branches:
       - main
-
 jobs:
   testing:
     runs-on: ubuntu-latest
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: use upstream test composite action
-        uses: ./.github/actions/dependencies
+        uses: ./.github/actions/dependencies_cad_to_dagmc
 
       - shell: bash
         env:
