--- a/.github/actions/dependencies_cad_to_dagmc/action.yml
+++ b/.github/actions/dependencies_cad_to_dagmc/action.yml
@@ -24,5 +24,5 @@ runs:
           pip install cadquery==2.4.0
           pip install cad_to_dagmc
           pip install openmc_data_downloader
-          openmc_data_downloader -l ENDFB-7.1-NNDC -i Fe56 Be9
+          openmc_data_downloader -l ENDFB-7.1-NNDC -i Fe56 Be9 Al27
           pip install .[tests]
