added vtk package

--- a/.github/actions/dependencies_cad_to_openmc/action.yml
+++ b/.github/actions/dependencies_cad_to_openmc/action.yml
@@ -15,6 +15,7 @@ runs:
           sudo apt-get install -y libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev libosmesa6 libosmesa6-dev libgles2-mesa-dev libarchive-dev libpangocairo-1.0-0
           pip install --extra-index-url https://shimwell.github.io/wheels openmc moab
           pip install CAD_to_OpenMC
+          pip install vtk
           pip install openmc_data_downloader
           openmc_data_downloader -l ENDFB-7.1-NNDC -i Fe56 Be9 Al27
           pip install .[tests]
